--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -42,8 +42,7 @@ jobs:
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=200 --statistics
 
-      - name: Run unit tests with pytest
-        run: |
-          pytest --maxfail=1 --disable-warnings -q
+      - name: Run unit tests with nose
+        run: nosetests
         env:
           DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
